--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -157,12 +157,12 @@ to numbers---at times for convenience, but mostly out of necessity.
 Here's a simple example:
 
 ```
->>> [a = 3]
-   >>> [a + 1]
-   4
->>> [a = 5]
-   >>> [a + 1]
-   6
+>>> [a = 3] # Assigning the value 3 to the variable 'a'
+>>> [a + 1] # Adding 1 to the value of 'a'
+4
+>>> [a = 5] # Changing the value of 'a' to 5
+>>> [a + 1] # Adding 1 to the new value of 'a'
+6
 ```
 
 At [➊], we assign the name [a] to the number 3. When we
@@ -199,17 +199,17 @@ Python considers integers and floating point numbers to be different
 you what kind of number you've just input. For example:
 
 ```
->>> [type(3)]
+>>> [type(3)] # Checking the type of an integer
 <class 'int'>
 
->>> [type(3.5)]
+>>> [type(3.5)] # Checking the type of a floating point number
 <class 'float'>
 
->>> [type(3.0)]
+>>> [type(3.0)] # Checking the type of a floating point number with no decimal part
 <class 'float'>
 ```
 
-[]{#page_5}Here, you can see that Python classifies the number 3 as an
+Here, you can see that Python classifies the number 3 as an
 integer (type ['int']) but classifies 3.0 as a floating
 point number (type ['float']). We all know that 3 and 3.0
 are mathematically equivalent, but in many situations, Python will treat
@@ -223,9 +223,9 @@ from floating point numbers to integers. Luckily, there's a function
 built in to Python that does just that:
 
 ```
->>> [int(3.8)]\
-3\
->>> [int(3.0)]\
+>>> [int(3.8)] # Converting a floating point number to an integer
+3
+>>> [int(3.0)] # Converting a floating point number with no decimal part to an integer
 3
 ```
 
@@ -235,7 +235,7 @@ resulting integer. The [float()] function works similarly to
 perform the reverse conversion:
 
 ```
->>> [float(3)]\
+>>> [float(3)] # Converting an integer to a floating point number
 3.0
 ```
 
@@ -261,26 +261,26 @@ Let's see a quick example---we'll create a new label, [f],
 which refers to the fraction 3/4:
 
 ```
-[➊] >>> [from fractions import Fraction]\
-[➋] >>> [f = Fraction(3, 4)]\
-[➌] >>> [f]\
-   Fraction(3, 4)
+>>> [from fractions import Fraction] # Importing the Fraction class from the fractions module
+>>> [f = Fraction(3, 4)] # Creating a Fraction object for the fraction 3/4
+>>> [f] # Printing the Fraction object
+Fraction(3, 4)
 ```
 
 We first import the [Fraction] class from the
 [fractions] module [➊]. Next, we create an object of
-this class by passing the numerator and []{#page_6}denominator as
+this class by passing the numerator and denominator as
 parameters [➋]. This creates a [Fraction] object for the
 fraction 3/4. When we print the object [➌], Python displays the
-fraction in the form [Fraction([numerator]{.codeitalic},
-[denominator]{.codeitalic})].
+fraction in the form [Fraction([numerator],
+[denominator])].
 
 The basic mathematical operations, including the comparison operations,
 are all valid for fractions. You can also combine a fraction, an
 integer, and a floating point number in a single expression:
 
 ```
->>> [Fraction(3, 4) + 1 + 1.5]\
+>>> [Fraction(3, 4) + 1 + 1.5] # Adding a fraction, an integer, and a floating point number
 3.25
 ```
 
@@ -292,7 +292,7 @@ expression, the result is a fraction, even if the result has a
 denominator of 1.
 
 ```
->>> [Fraction(3, 4) + 1 + Fraction(1/4)]\
+>>> [Fraction(3, 4) + 1 + Fraction(1/4)] # Adding a fraction and an integer
 Fraction(2, 1)
 ```
 
@@ -308,9 +308,9 @@ notation). For example, the complex number 2 + 3*i* would be written in
 Python as 2 + 3*j*:
 
 ```
->>> [a = 2 + 3j]\
->>> [type(a)]\
-\<class 'complex'>
+>>> [a = 2 + 3j] # Defining a complex number
+>>> [type(a)] # Checking the type of a complex number
+<class 'complex'>
 ```
 
 As you can see, when we use the [type()] function on a complex
@@ -321,8 +321,8 @@ You can also define complex numbers using the [complex()]
 function:
 
 ```
->>> [a = complex(2, 3)]\
->>> [a]\
+>>> [a = complex(2, 3)] # Defining a complex number using the complex() function
+>>> [a] # Printing the complex number
 (2 + 3j)
 ```
 
@@ -334,20 +334,20 @@ You can add and subtract complex numbers in the same way as real
 numbers:
 
 ```
->>> [b = 3 + 3j]\
->>> [a + b]\
-(5 + 6j)\
->>> [a - b]\
+>>> [b = 3 + 3j] # Defining another complex number
+>>> [a + b] # Adding two complex numbers
+(5 + 6j)
+>>> [a - b] # Subtracting two complex numbers
 (-1 + 0j)
 ```
 
-[]{#page_7}Multiplication and division of complex numbers are also
+Multiplication and division of complex numbers are also
 carried out similarly:
 
 ```
->>> [a \* b]\
-(-3 + 15j)\
->>> [a / b]\
+>>> [a * b] # Multiplying two complex numbers
+(-3 + 15j)
+>>> [a / b] # Dividing two complex numbers
 (0.8333333333333334 + 0.16666666666666666j)
 ```
 
@@ -358,10 +358,10 @@ The real and imaginary parts of a complex number can be retrieved using
 its [real] and [imag] attributes, as follows:
 
 ```
->>> [z = 2 + 3j]\
->>> [z.real]\
-2.0\
->>> [z.imag]\
+>>> [z = 2 + 3j] # Defining a complex number
+>>> [z.real] # Getting the real part of a complex number
+2.0
+>>> [z.imag] # Getting the imaginary part of a complex number
 3.0
 ```
 
@@ -370,7 +370,7 @@ imaginary part with an equal magnitude and an opposite sign. It can be
 obtained using the [conjugate()] method:
 
 ```
->>> [z.conjugate()]\
+>>> [z.conjugate()] # Getting the conjugate of a complex number
 (2 - 3j)
 ```
 
@@ -382,7 +382,7 @@ real and imaginary parts of the number, respectively:
 following:
 
 ```
->>> [(z.real \*\* 2 + z.imag \*\* 2) \*\* 0.5]\
+>>> [(z.real ** 2 + z.imag ** 2) ** 0.5] # Calculating the magnitude of a complex number
 3.605551275463989
 ```
 
@@ -393,7 +393,7 @@ example, [abs(5)] and [abs(-5)] both return 5.
 However, for complex numbers, it returns the magnitude:
 
 ```
->>> [abs(z)]\
+>>> [abs(z)] # Getting the magnitude of a complex number using the abs() function
 3.605551275463989
 ```
 
@@ -410,7 +410,7 @@ operations on that number, and then display the results of the
 operations. Let's see it in action:
 
 ```
-[➊] >>> [a = input()]\
+[➊] >>> [a = input()]
 [➋] 1
 ```
 
@@ -419,7 +419,7 @@ you to type something, as shown at [➋], and press [ENTER]{.small}.
 The input provided is stored in [a]:
 
 ```
-   >>> [a]\
+   >>> [a]
 [➌] '1'
 ```
 
@@ -429,7 +429,7 @@ of characters between two quotes. When you want to create a string,
 either single quotes or double quotes can be used:
 
 ```
->>> [s1 = 'a string']\
+>>> [s1 = 'a string']
 >>> [s2 = \"a string\"]
 ```
 
@@ -443,10 +443,10 @@ converted to an integer or floating point number using the
 [int()] or [float()] function, respectively:
 
 ```
->>> [a = '1']\
->>> [int(a) + 1]\
+>>> [a = '1']
+>>> [int(a) + 1]
 2\
->>> [float(a) + 1]\
+>>> [float(a) + 1]
 2.0
 ```
 
@@ -462,11 +462,11 @@ input that string into the [int()] function, you'll get an
 error message:
 
 ```
->>> [int('2.0')]\
+>>> [int('2.0')]
 Traceback (most recent call last):\
 []{#page_9}\
   File \"\<pyshell\#26>\", line 1, in \<module>\
-    int('2.0')\
+    int('2.0')
 ValueError: invalid literal for int() with base 10: '2.0'
 ```
 
@@ -480,11 +480,11 @@ Python cannot convert it into an equivalent floating point number or
 integer. Once again, a [ValueError] exception is raised:
 
 ```
->>> [a = float(input())]\
+>>> [a = float(input())]
 3/4\
 Traceback (most recent call last):\
   File \"\<pyshell\#25>\", line 1, in \<module>\
-    a=float(input())\
+    a=float(input())
 ValueError: could not convert string to float: '3/4'
 ```
 
@@ -508,9 +508,9 @@ This is how you would perform the above conversion in a
 invalid input:
 
 ```
->>> [try:]\
-        [a = float(input('Enter a number: '))]\
-[except ValueError:]\
+>>> [try:]
+        [a = float(input('Enter a number: '))]
+[except ValueError:]
         [print('You entered an invalid number')]
 ```
 
@@ -522,7 +522,7 @@ Now, when you give an invalid input, such as 3/4, it prints a helpful
 error message, as shown at [➊]:
 
 ```
-   Enter a number: [3/4]\
+   Enter a number: [3/4]
 [➊] You entered an invalid number
 ```
 
@@ -543,9 +543,9 @@ attempt to perform any operations on these numbers. You can combine the
 input and conversion in a single statement, as follows:
 
 ```
->>> [a = int(input())]\
+>>> [a = int(input())]
 1\
->>> [a + 1]\
+>>> [a + 1]
 2
 ```
 
@@ -554,11 +554,11 @@ if the input is a floating point number (even one that's equivalent to
 an integer, like 1.0), this will produce an error:
 
 ```
->>> [a = int(input())]\
-[1.0]\
+>>> [a = int(input())]
+[1.0]
 Traceback (most recent call last):\
   File \"\<pyshell\#42>\", line 1, in \<module>\
-    a=int(input())\
+    a=int(input())
 ValueError: invalid literal for int() with base 10: '1.0'
 ```
 
@@ -579,7 +579,7 @@ integer form.)
 Here's an example:
 
 ```
->>> [1.1.is\_integer()]\
+>>> [1.1.is\_integer()]
 False
 ```
 
@@ -590,7 +590,7 @@ called with 1.0 as the floating point number, the result is
 [True]:
 
 ```
->>> [1.0.is\_integer()]\
+>>> [1.0.is\_integer()]
 True
 ```
 
@@ -607,22 +607,22 @@ of converting a string such as ['3/4'] to a
 fraction as an input:
 
 ```
->>> [a = Fraction(input('Enter a fraction: '))]\
-Enter a fraction: [3/4]\
->>> [a]\
+>>> [a = Fraction(input('Enter a fraction: '))]
+Enter a fraction: [3/4]
+>>> [a]
 Fraction(3, 4)
 ```
 
 Try entering a fraction such as 3/0 as input:
 
 ```
->>> [a = Fraction(input('Enter a fraction: '))]\
-Enter a fraction: [3/0]\
+>>> [a = Fraction(input('Enter a fraction: '))]
+Enter a fraction: [3/0]
 Traceback (most recent call last):\
   File \"\<pyshell\#2>\", line 1, in \<module>\
-    a = Fraction(input('Enter a fraction: '))\
+    a = Fraction(input('Enter a fraction: '))
   File \"/usr/lib64/python3.3/fractions.py\", line 167, in \_\_new\_\_\
-    raise ZeroDivisionError('Fraction(%s, 0)' % numerator)\
+    raise ZeroDivisionError('Fraction(%s, 0)' % numerator)
 ZeroDivisionError: Fraction(3, 0)
 
 The [ZeroDivisionError] exception message tells you (as you
@@ -632,12 +632,12 @@ programs, it's a good idea to always catch such exceptions. Here is how
 you can do something like that:
 
 ```
->>> [try:]\
-        [a = Fraction(input('Enter a fraction: '))\
-except ZeroDivisionError:]\
-        [print('Invalid fraction')]\
+>>> [try:]
+        [a = Fraction(input('Enter a fraction: '))
+except ZeroDivisionError:]
+        [print('Invalid fraction')]
 \
-Enter a fraction: [3/0]\
+Enter a fraction: [3/0]
 Invalid fraction
 ```
 
@@ -648,9 +648,9 @@ denominator, it'll print the message [Invalid fraction].
 string such as ['2+3j'] into a complex number:
 
 ```
->>> [z = complex(input('Enter a complex number: '))]\
-Enter a complex number: [2+3j]\
->>> [z]\
+>>> [z = complex(input('Enter a complex number: '))]
+Enter a complex number: [2+3j]
+>>> [z]
 (2+3j)
 ```
 
@@ -658,11 +658,11 @@ If you enter the string as ['2 + 3j'] (with spaces), it will
 result in a [ValueError] error message:
 
 ```
->>> [z = complex(input('Enter a complex number: '))]\
-Enter a complex number: [2 + 3j]\
+>>> [z = complex(input('Enter a complex number: '))]
+Enter a complex number: [2 + 3j]
 Traceback (most recent call last):\
   File \"\<pyshell\#43>\", line 1, in \<module>\
-    z = complex(input('Enter a complex number: '))\
+    z = complex(input('Enter a complex number: '))
 ValueError: complex() arg is a malformed string
 ```
 
@@ -686,10 +686,10 @@ a nonzero integer, [a], is a factor of another integer,
 [b]:
 
 ```
->>> [def is\_factor(a, b):]\
-        [if b % a == 0:]\
-            [return True]\
-        [else:]\
+>>> [def is\_factor(a, b):]
+        [if b % a == 0:]
+            [return True]
+        [else:]
             [return False]
 ```
 
@@ -699,7 +699,7 @@ like "Is 4 a factor of 1024?", you can use the [is\_factor()]
 function:
 
 ```
->>> [is\_factor(4, 1024)]\
+>>> [is\_factor(4, 1024)]
 True
 ```
 
@@ -714,8 +714,8 @@ Before we write the full program, let's take a look at how
 function looks like this:
 
 ```
->>> [for i in range(1, 4):]\
-        [print(i)]\
+>>> [for i in range(1, 4):]
+        [print(i)]
 1\
 2\
 3
@@ -735,8 +735,8 @@ You can also use the [range()] function without specifying the
 start value, in which case it's assumed to be 0. For example:
 
 ```
->>> [for i in range(5):]\
-        [print(i)]\
+>>> [for i in range(5):]
+        [print(i)]
 0\
 1\
 2\
@@ -752,8 +752,8 @@ step value). For example, the following program prints the odd numbers
 *below* 10:
 
 ```
->>> [for i in range(1,10,2):]\
-        [print(i)]\
+>>> [for i in range(1,10,2):]
+        [print(i)]
 1\
 3\
 5\
@@ -779,15 +779,15 @@ Python as part of the program; it's just commentary for us humans.
 \
 [➊]     for i in range(1, b+1):\
            if b % i == 0:\
-               print(i)\
+               print(i)
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
 \
-       b = input('Your Number Please: ')\
-       b = float(b)\
+       b = input('Your Number Please: ')
+       b = float(b)
 \
 [➋]     if b > 0 and b.is\_integer():\
-           factors(int(b))\
+           factors(int(b))
        else:\
            print('Please enter a positive integer')
 ```
@@ -805,7 +805,7 @@ it asks you to input a number. If your number is a positive integer, its
 factors are printed. For example:
 
 ```
-Your Number Please: [25]\
+Your Number Please: [25]
 1\
 5\
 25
@@ -815,7 +815,7 @@ If you enter a non-integer or a negative integer as an input, the
 program prints an error message asking you to input a positive integer:
 
 ```
-Your Number Please: [15.5]\
+Your Number Please: [15.5]
 Please enter a positive integer
 ```
 
@@ -861,10 +861,10 @@ wanted to print them out to make a coherent sentence, I could use the
 [format()] method as follows:
 
 ```
->>> [item1 = 'apples']\
->>> [item2 = 'bananas']\
->>> [item3 = 'grapes']\
->>> [print('At the grocery store, I bought some {0} and {1} and {2}'.format(item1, item2, item3))]\
+>>> [item1 = 'apples']
+>>> [item2 = 'bananas']
+>>> [item3 = 'grapes']
+>>> [print('At the grocery store, I bought some {0} and {1} and {2}'.format(item1, item2, item3))]
 At the grocery store, I bought some apples and bananas and grapes
 ```
 
@@ -883,7 +883,7 @@ It's not necessary to have labels pointing to the values we want to
 print. We can also just type values into [.format()], as in
 the following example:
 
->>> [print('Number 1: {0} Number 2: {1} '.format(1, 3.578))]\
+>>> [print('Number 1: {0} Number 2: {1} '.format(1, 3.578))]
 Number 1: 1 Number 2: 3.578
 
 Note that the number of placeholders and the number of labels or values
@@ -901,10 +901,10 @@ printer:
    def multi\_table(a):\
 \
 [➊]     for i in range(1, 11):\
-           print('{0} x {1} = {2}'.format(a, i, a\*i))\
+           print('{0} x {1} = {2}'.format(a, i, a\*i))
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
-       a = input('Enter a number: ')\
+       a = input('Enter a number: ')
        multi\_table(float(a))
 ```
 
@@ -919,7 +919,7 @@ When you execute the program, it asks you to input a number, and the
 program prints its multiplication table:
 
 ```
-Enter a number : [5]\
+Enter a number : [5]
 5.0 x 1 = 5.0\
 5.0 x 2 = 10.0\
 5.0 x 3 = 15.0\
@@ -942,9 +942,9 @@ decimal places, you can specify that with the [format()]
 method. Here is an example:
 
 ```
->>> ['{0}'.format(1.25456)]\
+>>> ['{0}'.format(1.25456)]
 '1.25456'\
->>> ['{0:.2f}'.format(1.25456)]\
+>>> ['{0:.2f}'.format(1.25456)]
 '1.25'
 ```
 
@@ -958,7 +958,7 @@ there are more numbers after the decimal point than you specified. For
 example:
 
 ```
->>> ['{0:.2f}'.format(1.25556)]\
+>>> ['{0:.2f}'.format(1.25556)]
 '1.26'
 ```
 
@@ -967,7 +967,7 @@ Here, 1.25556 is rounded up to the nearest hundredth and printed as
 integer, zeros are added at the end:
 
 ```
->>> ['{0:.2f}'.format(1)]\
+>>> ['{0:.2f}'.format(1)]
 '1.00'
 ```
 
@@ -1013,7 +1013,7 @@ the measurement in meters. For example, here's how you can convert 25.5
 inches to meters:
 
 ```
->>> [(25.5 \* 2.54) / 100]\
+>>> [(25.5 \* 2.54) / 100]
 0.6476999999999999
 ```
 
@@ -1022,7 +1022,7 @@ if you see that your destination is 650 miles away, you're 650 × 1.609
 kilometers away:
 
 ```
->>> [650 \* 1.609]\
+>>> [650 \* 1.609]
 1045.85
 ```
 
@@ -1040,8 +1040,8 @@ human body temperature. To find the corresponding temperature in degrees
 Celsius, we evaluate the above formula in Python:
 
 ```
->>> [F = 98.6]\
->>> [(F - 32) \* (5 / 9)]\
+>>> [F = 98.6]
+>>> [(F - 32) \* (5 / 9)]
 37.0
 ```
 
@@ -1058,8 +1058,8 @@ formula
 You can evaluate this formula in a similar manner:
 
 ```
->>> [C = 37]\
->>> [C \* (9 / 5) + 32]\
+>>> [C = 37]
+>>> [C \* (9 / 5) + 32]
 98.60000000000001
 ```
 
@@ -1080,26 +1080,26 @@ shown below:
    '''\
 \
    def print\_menu():\
-       print('1. Kilometers to Miles')\
-       print('2. Miles to Kilometers')\
+       print('1. Kilometers to Miles')
+       print('2. Miles to Kilometers')
 \
    def km\_miles():\
-       km = float(input('Enter distance in kilometers: '))\
+       km = float(input('Enter distance in kilometers: '))
        miles = km / 1.609\
 \
-       print('Distance in miles: {0}'.format(miles))\
+       print('Distance in miles: {0}'.format(miles))
 \
    def miles\_km():\
-       miles = float(input('Enter distance in miles: '))\
+       miles = float(input('Enter distance in miles: '))
        km = miles \* 1.609\
 \
-       print('Distance in kilometers: {0}'.format(km))\
+       print('Distance in kilometers: {0}'.format(km))
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
-[➊]     print\_menu()\
-[➋]     choice = input('Which conversion would you like to do?: ')\
+[➊]     print\_menu()
+[➋]     choice = input('Which conversion would you like to do?: ')
        if choice == '1':\
-           km\_miles()\
+           km\_miles()
 \
        if choice == '2':\
            miles\_km()
@@ -1122,8 +1122,8 @@ Here is a sample run of the program:
 
    1. Kilometers to Miles\
    2. Miles to Kilometers\
-[➊] Which conversion would you like to do?: [2]\
-   Enter distance in miles: [100]\
+[➊] Which conversion would you like to do?: [2]
+   Enter distance in miles: [100]
    Distance in kilometers: 160.900000
 
 []{#page_20}The user is asked to enter a choice at [➊]. The choice
@@ -1148,8 +1148,8 @@ Finding the value of the expression on the right gives you the value of
 Python, you can do this as follows:
 
 ```
->>> [x = 10 - 500 + 79]\
->>> [x]\
+>>> [x = 10 - 500 + 79]
+>>> [x]
 -411
 ```
 
@@ -1177,8 +1177,8 @@ and *c* as the labels [a], [b], and [c]
 with the appropriate values:
 
 ```
->>> [a = 1]\
->>> [b = 2]\
+>>> [a = 1]
+>>> [b = 2]
 >>> [c = 1]
 ```
 
@@ -1187,7 +1187,7 @@ with the appropriate values:
 ![image](graphics/e0021-01.jpg):
 
 ```
->>> [D = (b\*\*2 -- 4\*a\*c)\*\*0.5]
+>>> [D = (b\*\*2 -- 4\*a\*c)*\*0.5]
 ```
 
 As you can see, we evaluate the square root of *b*^2^ -- 4*ac* by
@@ -1195,11 +1195,11 @@ raising it to the 0.5th power. Now, we can write the expressions for
 evaluating *x*~1~ and *x*~2~:
 
 ```
->>> [x\_1 = (-b + D)/(2\*a)]\
->>> [x\_1]\
+>>> [x\_1 = (-b + D)/(2\*a)]
+>>> [x\_1]
 -1.0\
->>> [x\_2 = (-b - D)/(2\*a)]\
->>> [x\_2]\
+>>> [x\_2 = (-b - D)/(2\*a)]
+>>> [x\_2]
 -1.0
 ```
 
@@ -1218,17 +1218,17 @@ Quadratic equation root calculator\
 \
 def roots(a, b, c):\
 \
-    D = (b\*b - 4\*a\*c)\*\*0.5\
-    x\_1 = (-b + D)/(2\*a)\
-    x\_2 = (-b - D)/(2\*a)\
+    D = (b\*b - 4\*a\*c)*\*0.5\
+    x\_1 = (-b + D)/(2\*a)
+    x\_2 = (-b - D)/(2\*a)
 \
-    print('x1: {0}'.format(x\_1))\
-    print('x2: {0}'.format(x\_2))\
+    print('x1: {0}'.format(x\_1))
+    print('x2: {0}'.format(x\_2))
 \
 if \_\_name\_\_ == '\_\_main\_\_':\
-    a = input('Enter a: ')\
-    b = input('Enter b: ')\
-    c = input('Enter c: ')\
+    a = input('Enter a: ')
+    b = input('Enter b: ')
+    c = input('Enter c: ')
     roots(float(a), float(b), float(c))
 ```
 
@@ -1245,9 +1245,9 @@ When you execute the program, it will ask the user to input values of
 find the roots for.
 
 ```
-Enter a: [1]\
-Enter b: [2]\
-Enter c: [1]\
+Enter a: [1]
+Enter b: [2]
+Enter c: [1]
 []{#page_22}\
 x1: -1.000000\
 x2: -1.000000
@@ -1263,10 +1263,10 @@ well. Let's give it a shot by executing the program again (the constants
 are *a* = 1, *b* = 1, and *c* = 1):
 
 ```
-Enter a: [1]\
-Enter b: [1]\
-Enter c: [1]\
-x1: (-0.49999999999999994+0.8660254037844386j)\
+Enter a: [1]
+Enter b: [1]
+Enter c: [1]
+x1: (-0.49999999999999994+0.8660254037844386j)
 x2: (-0.5-0.8660254037844386j)
 ```
 
@@ -1340,12 +1340,12 @@ can write the program with only the addition operation:
    from fractions import Fraction\
 \
    def add(a, b):\
-       print('Result of Addition: {0}'.format(a+b))\
+       print('Result of Addition: {0}'.format(a+b))
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
-[➊]     a = Fraction(input('Enter first fraction: '))\
-[➋]     b = Fraction(input('Enter second fraction: '))\
-       op = input('Operation to perform - Add, Subtract, Divide, Multiply: ')\
+[➊]     a = Fraction(input('Enter first fraction: '))
+[➋]     b = Fraction(input('Enter second fraction: '))
+       op = input('Operation to perform - Add, Subtract, Divide, Multiply: ')
        if op == 'Add':\
            add(a,b)
 ```
@@ -1359,9 +1359,9 @@ fractions passed as arguments. The [add()] function performs
 the operation and prints the result. For example:
 
 ```
-Enter first fraction: [3/4]\
-Enter second fraction: [1/4]\
-Operation to perform - Add, Subtract, Divide, Multiply: [Add]\
+Enter first fraction: [3/4]
+Enter second fraction: [1/4]
+Operation to perform - Add, Subtract, Divide, Multiply: [Add]
 Result of Addition: 1
 ```
 
@@ -1370,9 +1370,9 @@ division, and multiplication. For example, here's how your program
 should be able to calculate the difference of two fractions:
 
 ```
-Enter first fraction: [3/4]\
-Enter second fraction: [1/4]\
-Operation to perform - Add, Subtract, Divide, Multiply: [Subtract]\
+Enter first fraction: [3/4]
+Enter second fraction: [1/4]
+Operation to perform - Add, Subtract, Divide, Multiply: [Subtract]
 Result of Subtraction: 2/4
 ```
 
@@ -1400,12 +1400,12 @@ program:
    '''\
 \
    def fun():\
-       print('I am in an endless loop')\
+       print('I am in an endless loop')
 \
    if \_\_name\_\_ == '\_\_main\_\_':\
 [➊]     while True:\
-           fun()\
-[➋]         answer = input('Do you want to exit? (y) for yes ')\
+           fun()
+[➋]         answer = input('Do you want to exit? (y) for yes ')
            if answer == 'y':\
                break
 ```
@@ -1428,11 +1428,11 @@ of the program:
 
 ```
 I am in an endless loop\
-Do you want to exit? (y) for yes [n]\
+Do you want to exit? (y) for yes [n]
 I am in an endless loop\
-Do you want to exit? (y) for yes [n]\
+Do you want to exit? (y) for yes [n]
 I am in an endless loop\
-Do you want to exit? (y) for yes [n]\
+Do you want to exit? (y) for yes [n]
 I am in an endless loop\
 Do you want to exit? (y) for yes [y]
 ```
@@ -1450,17 +1450,17 @@ exit power to the user\
 def multi\_table(a):\
 \
     for i in range(1, 11):\
-        print('{0} x {1} = {2}'.format(a, i, a\*i))\
+        print('{0} x {1} = {2}'.format(a, i, a\*i))
 \
 if \_\_name\_\_ == '\_\_main\_\_':\
 \
 \
-    [while True:]\
-        a = input('Enter a number: ')\
-        multi\_table(float(a))\
+    [while True:]
+        a = input('Enter a number: ')
+        multi\_table(float(a))
 \
-        [answer = input('Do you want to exit? (y) for yes ')]\
-        [if answer == 'y':]\
+        [answer = input('Do you want to exit? (y) for yes ')]
+        [if answer == 'y':]
             [break]
 ```
 
@@ -1476,7 +1476,7 @@ to exit, the program will be ready to print the table for another
 number. Here is a sample run:
 
 ```
-Enter a number: [2]\
+Enter a number: [2]
 2.000000 x 1.000000 = 2.000000\
 2.000000 x 2.000000 = 4.000000\
 2.000000 x 3.000000 = 6.000000\
@@ -1488,7 +1488,7 @@ Enter a number: [2]\
 2.000000 x 8.000000 = 16.000000\
 2.000000 x 9.000000 = 18.000000\
 2.000000 x 10.000000 = 20.000000\
-Do you want to exit? (y) for yes [n]\
+Do you want to exit? (y) for yes [n]
 Enter a number:
 ```
 
